# boiler

./: Makefile  README.md  boiler  boiler.ps1
c/: .gitignore  CMakeLists.txt  Makefile  configure.sh
c/src/: main.c
cpp/: .gitignore  BUILD  CMakeLists.txt  Makefile
cpp/src/: main.cpp
html/: index.html
html/assets/: style.css
latex/: main.tex
